cmake_minimum_required(VERSION 3.22)
project(OOPnm)

set(CMAKE_C_STANDARD 14)
set(CMAKE_CXX_STANDARD 14)

include_directories(2_1_A10)
include_directories(2_4_A9)

add_executable(1_1_A9 1_1_A9/1_1_A9.cpp)
add_executable(1_2_A9 1_2_A9/1_2_A9.cpp)
add_executable(1_3_A9 1_3_A9/1_3_A9.cpp)
add_executable(1_4_A9 1_4_A9/1_4_A9.cpp)
add_executable(2_1_A9 2_1_A9/2_1_A9.cpp)
add_executable(2_2_A9 2_2_A9/2_2_A9.cpp)
add_executable(2_3_A9 2_3_A9/2_3_A9.cpp)
add_executable(2_4_A9 2_4_A9/2_4_A9.cpp)
add_executable(3_1_A9 3_1_A9/3_1_A9.cpp)
add_executable(3_2_A9 3_2_A9/3_2_A9.cpp)
add_executable(3_5_A9 3_5_A9/3_5_A9.cpp)
add_executable(3_6_A9 3_6_A9/3_6_A9.cpp)
add_executable(3_7_A9 3_7_A9/3_7_A9.cpp)
add_executable(4_1_A9 4_1_A9/4_1_A9.cpp)